--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,7 +24,13 @@ jobs:
           - build_variant: "mt7621"
             targets: "CR660x"
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+         with:
+         node-version: 16
+         cache: 'npm'
+      - run: npm ci
+      - run: npm teststeps:
       - name: Prepare environment
         run: |
           sudo apt update
